--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- Header  -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-    <img class="w3-image" type="text/html" src="/images/home_page.jpg" alt="Architecture" width="1500" height="400">
+    <img class="w3-image" type="image/*" src="/images/home_page.jpg" alt="Architecture" width="1500" height="400">
     <div class="w3-display-middle w3-margin-top w3-center typing-demo">
         <h1 class="w3-xxlarge w3-text-white" ><span class="w3-padding w3-black w3-opacity-min"><b>ghostFiles</b>
     </div>
