--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>ghostFiles</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-with, initial-scale=1, user-scalable=no" />
-    <link type= "text/css" rel="stylesheet" href="/css/home.css"/>
-    <link type= "text/css" rel="stylesheet" href="/css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link type= "text/css" rel="stylesheet" href="/assets/css/home.css"/>
+    <link type= "text/css" rel="stylesheet" href="/assets/css/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <!-- Navbar (sit on top) -->
@@ -23,7 +23,7 @@
 
 <!-- Header  -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-    <img class="w3-image" type="image/*" src="/images/home_page.jpg" alt="Architecture" width="1500" height="400">
+    <img class="w3-image" type="image/*" src="/assets/images/home_page.JPG" alt="Architecture" width="1500" height="400">
     <div class="w3-display-middle w3-margin-top w3-center typing-demo">
         <h1 class="w3-xxlarge w3-text-white" ><span class="w3-padding w3-black w3-opacity-min"><b>ghostFiles</b>
     </div>
